added a picture on index

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,5 +1,7 @@
 <html>
 <h1>Beer Listing</h1>
+<%= image_tag 'craftbeer.jpg' %>
+
 <% @beers.each do |beer| %>
     <p>
         <h3>Name: <%= beer.title %></h3>
