--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -254,25 +254,26 @@
 	<!-- Collection of nav links, forms, and other content for toggling -->
 	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
 		<ul class="nav navbar-nav">
-			<li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-			<li class="nav-item"><a href="#" class="nav-link">About</a></li>
+			<li class="nav-item"><a href="#" class="nav-link">Beers</a></li>
+			<li class="nav-item"><a href="#" class="nav-link">Guides</a></li>
 			<li class="nav-item dropdown">
-				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Services <b class="caret"></b></a>
+				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Countries <b class="caret"></b></a>
 				<ul class="dropdown-menu">
-					<li><a href="#" class="dropdown-item">Web Design</a></li>
-					<li><a href="#" class="dropdown-item">Web Development</a></li>
-					<li><a href="#" class="dropdown-item">Graphic Design</a></li>
-					<li><a href="#" class="dropdown-item">Digital Marketing</a></li>
+					<li><a href="#" class="dropdown-item">North America</a></li>
+					<li><a href="#" class="dropdown-item">South America</a></li>
+					<li><a href="#" class="dropdown-item">Europe</a></li>
+					<li><a href="#" class="dropdown-item">Asia</a></li>
+          <li><a href="#" class="dropdown-item">Oceania</a></li>
 				</ul>
 			</li>
-			<li class="nav-item active"><a href="#" class="nav-link">Pricing</a></li>
+			<!-- <li class="nav-item active"><a href="#" class="nav-link">Pricing</a></li>
 			<li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
-			<li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+			<li class="nav-item"><a href="#" class="nav-link">Contact</a></li> -->
 		</ul>
 		<form class="navbar-form form-inline">
 			<div class="input-group search-box">
 				<input type="text" id="search" class="form-control" placeholder="Search here...">
-				<span class="input-group-addon"><i class="material-icons">&#xE8B6;</i></span>
+				<span class="input-group-addon"><i class="material-icons"></i></span>
 			</div>
 		</form>
 		<ul class="nav navbar-nav navbar-right ml-auto">
