--- a/app/views/wishlists/index.html.erb
+++ b/app/views/wishlists/index.html.erb
@@ -243,7 +243,7 @@
 <body>
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
-		<a class="navbar-brand" href="#">beer<b>GEM</b></a>
+		<a class="navbar-brand" href="/beers">beer<b>GEM</b></a>
 		<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle navbar-toggler ml-auto">
 			<span class="navbar-toggler-icon"></span>
 			<span class="icon-bar"></span>
@@ -254,8 +254,8 @@
 	<!-- Collection of nav links, forms, and other content for toggling -->
 	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
 		<ul class="nav navbar-nav">
-			<li class="nav-item"><a href="#" class="nav-link">Beers</a></li>
-			<li class="nav-item"><a href="#" class="nav-link">Guides</a></li>
+			<li class="nav-item"><a href="/beer" class="nav-link">Beers</a></li>
+			<li class="nav-item"><a href="/guides" class="nav-link">Guides</a></li>
 			<li class="nav-item dropdown">
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Countries <b class="caret"></b></a>
 				<ul class="dropdown-menu">
