--- a/app/views/wishlists/show.html.erb
+++ b/app/views/wishlists/show.html.erb
@@ -243,7 +243,7 @@
 <body>
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
-		<a class="navbar-brand" href="/beers">beer<b>GEM</b></a>
+		<a class="navbar-brand" href="/home">beer<b>GEM</b></a>
 		<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle navbar-toggler ml-auto">
 			<span class="navbar-toggler-icon"></span>
 			<span class="icon-bar"></span>
