Form created for guides

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -292,7 +292,7 @@
 		</form>
 		<ul class="nav navbar-nav navbar-right ml-auto">
 			<li class="nav-item">
-				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Login</a>
+				<a data-toggle="button" class="nav-link dropdown-toggle" href="#">Login</a>
 				<ul class="dropdown-menu form-wrapper">
 					<li>
 						<form action="/examples/actions/confirmation.php" method="post">
