--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -283,19 +283,29 @@
 		</ul>
 
 
+			<form class="navbar-form form-inline">
+				<div class="input-group search-box">
+					<input type="text" id="search" class="form-control" placeholder="Search here...">
+					<span class="input-group-addon"><i class="material-icons"></i></span>
+				</div>
+			</form>
 
+			<ul class="nav navbar-nav navbar-right ml-auto">
+					<% if user_signed_in? %>
+							<li class="nav-item">
+					       <%= link_to 'Log Out', destroy_user_session_url, method: :delete, class:"btn btn-primary get-started-btn mt-1 mb-1" %>
+							</li
+					<% else%>
+							<li class="nav-item">
+					       <%= link_to 'Log In', new_user_session_url,class:"btn btn-primary get-started-btn mt-1 mb-1" %>
+							</li>
+					<% end %>
+			</ul>
 
-		<form class="navbar-form form-inline">
-			<div class="input-group search-box">
-				<input type="text" id="search" class="form-control" placeholder="Search here...">
-				<span class="input-group-addon"><i class="material-icons"></i></span>
-			</div>
-		</form>
-
-		<ul class="nav navbar-nav navbar-right ml-auto">
+		<!-- <ul class="nav navbar-nav navbar-right ml-auto">
 			<li class="nav-item">
 				<li class="nav-item">
-					<a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1">Log in</a>
+					<a href="" data-toggle="dropdown" class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1">Log in</a> -->
 					<!-- <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Login</a>
 				<ul class="dropdown-menu form-wrapper">
 					<li>
@@ -389,5 +399,9 @@
     </div>
   </div>
 </div>
+
+<%= link_to "logout", destroy_user_session_path, method: :delete %>
+
+
 
 </html>
