--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -278,6 +278,25 @@
 			</div>
 		</form>
 
+
+		<ul class="nav navbar-nav navbar-right ml-auto">
+				<% if user_signed_in? %>
+						<li class="nav-item">
+							 <%= link_to 'Log Out', destroy_user_session_url, method: :delete, class:"btn btn-primary get-started-btn mt-1 mb-1" %>
+						</li
+				<% else%>
+						<li class="nav-item">
+							 <%= link_to 'Log In', new_user_session_url,class:"btn btn-primary get-started-btn mt-1 mb-1" %>
+						</li>
+				<% end %>
+		</ul>
+
+
+
+
+
+
+
 		<ul class="nav navbar-nav navbar-right ml-auto">
 			<li class="nav-item">
 				<li class="nav-item">
