--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -277,10 +277,31 @@
 			</div>
 		</form>
 
+
 		<ul class="nav navbar-nav navbar-right ml-auto">
+				<% if user_signed_in? %>
+						<li class="nav-item">
+							 <%= link_to 'Log Out', destroy_user_session_url, method: :delete, class:"btn btn-primary get-started-btn mt-1 mb-1" %>
+						</li
+				<% else%>
+						<li class="nav-item">
+							 <%= link_to 'Log In', new_user_session_url,class:"btn btn-primary get-started-btn mt-1 mb-1" %>
+						</li>
+				<% end %>
+		</ul>
+
+
+
+
+
+
+
+
+
+		<!-- <ul class="nav navbar-nav navbar-right ml-auto">
 			<li class="nav-item">
 				<li class="nav-item">
-					<a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1">Log in</a>
+					<a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1">Log in</a> -->
 					<!-- <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Login</a>
 				<ul class="dropdown-menu form-wrapper">
 					<li>
