--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -280,10 +280,9 @@
           <li><a href="#" class="dropdown-item">Oceania</a></li>
 				</ul>
 			</li>
-			<!-- <li class="nav-item active"><a href="#" class="nav-link">Pricing</a></li>
-			<li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
-			<li class="nav-item"><a href="#" class="nav-link">Contact</a></li> -->
 		</ul>
+
+		<!-- SEARCH BOX -->
 		<form class="navbar-form form-inline">
 			<div class="input-group search-box">
 				<input type="text" id="search" class="form-control" placeholder="Search here...">
@@ -291,7 +290,7 @@
 			</div>
 		</form>
 
-
+				<!-- LOGIN and LOG OUT -->
 		<ul class="nav navbar-nav navbar-right ml-auto">
 				<% if user_signed_in? %>
 						<li class="nav-item">
@@ -303,78 +302,22 @@
 						</li>
 				<% end %>
 		</ul>
-
-
-
-
-
-
-<!--
-		<ul class="nav navbar-nav navbar-right ml-auto">
-			<li class="nav-item">
-				<li class="nav-item">
-					<a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1">Log in</a> -->
-					<!-- <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Login</a>
-				<ul class="dropdown-menu form-wrapper">
-					<li>
-						<form action="/examples/actions/confirmation.php" method="post"> -->
-							<!-- <p class="hint-text">Sign in with your social media account</p>
-							<div class="form-group social-btn clearfix">
-								<a href="#" class="btn btn-primary pull-left"><i class="fa fa-facebook"></i> Facebook</a>
-								<a href="#" class="btn btn-info pull-right"><i class="fa fa-twitter"></i> Twitter</a>
-							</div> -->
-							<!-- <div class="or-seperator"><b>or</b></div> -->
-							<!-- <div class="form-group">
-								<input type="text" class="form-control" placeholder="Username" required="required">
-							</div> -->
-							<!-- <div class="form-group">
-								<input type="password" class="form-control" placeholder="Password" required="required">
-							</div> -->
-							<!-- <input type="submit" class="btn btn-primary btn-block" value="Login"> -->
-							<!-- <div class="form-footer">
-								<a href="#">Forgot Your password?</a>
-							</div> -->
-						<!-- </form>
-					</li>
-				</ul>
-			</li> -->
-
-				<!-- <ul class="dropdown-menu form-wrapper"> -->
-					<!-- <li> -->
-
-						<!-- <form action="/examples/actions/confirmation.php" method="post"> -->
-							<!-- <p class="hint-text">Fill in this form to create your account!</p> -->
-							<!-- <div class="form-group">
-								<input type="text" class="form-control" placeholder="Username" required="required">
-							</div> -->
-							<!-- <div class="form-group">
-								<input type="password" class="form-control" placeholder="Password" required="required">
-							</div> -->
-							<!-- <div class="form-group">
-								<input type="password" class="form-control" placeholder="Confirm Password" required="required">
-							</div> -->
-							<!-- <div class="form-group">
-								<label class="checkbox-inline"><input type="checkbox" required="required"> I am above 18 yea</a></label>
-							</div> -->
-							<!-- <input type="submit" class="btn btn-primary btn-block" value="Sign up"> -->
-						<!-- </form> -->
-					<!-- </li> -->
-				<!-- </ul> -->
-			</li>
-		</ul>
 	</div>
 </nav>
 </body>
 
 <br />
 
-<div class="container">
+<!-- <div class="container">
 <img src="<%=image_url("craftbeer.jpg") %>" class="img-fluid" alt="Responsive image">
 </div>
 <br />
-<br />
-<h1 style="text-align: center;">Top 10 beers</h1>
+<br /> -->
+
+
 <!-- Containers for IPA, PALE ALE & STOUTS -->
+<!-- <h1 style="text-align: center;">Top 10 beers</h1>
+
 <div class="container">
   <div class="row">
 
@@ -406,19 +349,145 @@
       </figure>
     </div>
   </div>
-</div>
+</div> -->
 
-<% @beers.each do |beer| %>
-    <p>
-        <h3>Name: <%= beer.title %></h3>
-        <ul>
-        <li><h4>The description of the beer is <%= beer.description %></h4>
-        <li><h4>This beer's is from <%= beer.country %></h4>
-        <li><h4>This beer's style is <%= beer.style %></h4>
-        <li><img src=<%= beer.image %> style ="height:100px; width:60px;">
-        </ul>
-    </p>
-    <br/>
-<%end %>
+<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+<!------ Include the above in your HEAD tag ---------->
+
+<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"> -->
+
+
+<div class="container">
+<br>  <h2 class="text-center">Showing a list of our craftbeers </h2>
+<hr>
+
+<div class="row">
+	<aside class="col-sm-4">
+
+
+<!-- CATEGORY -->
+<div class="card">
+	<article class="card-group-item">
+		<header class="card-header">
+			<h6 class="title">Beer Style </h6>
+		</header>
+
+		<div class="filter-content">
+			<div class="card-body">
+			<form>
+				<label class="form-check">
+				  <input class="form-check-input" type="checkbox" value="">
+				  <span class="form-check-label">
+				    IPA
+				  </span>
+				</label> <!-- form-check.// -->
+
+				<label class="form-check">
+				  <input class="form-check-input" type="checkbox" value="">
+				  <span class="form-check-label">
+				    Lager
+				  </span>
+				</label>  <!-- form-check.// -->
+
+				<label class="form-check">
+				  <input class="form-check-input" type="checkbox" value="">
+				  <span class="form-check-label">
+				    Stout
+				  </span>
+				</label>  <!-- form-check.// -->
+			</form>
+			</div> <!-- card-body.// -->
+		</div>
+	</article> <!-- card-group-item.// -->
+
+	<!-- REGIONS -->
+	<div class="card">
+		<article class="card-group-item">
+			<header class="card-header">
+				<h6 class="title">Country </h6>
+			</header>
+
+			<div class="filter-content">
+				<div class="card-body">
+				<form>
+					<label class="form-check">
+					  <input class="form-check-input" type="checkbox" value="">
+					  <span class="form-check-label">
+					    North America
+					  </span>
+					</label> <!-- form-check.// -->
+
+					<label class="form-check">
+					  <input class="form-check-input" type="checkbox" value="">
+					  <span class="form-check-label">
+					    South America
+					  </span>
+					</label>  <!-- form-check.// -->
+
+					<label class="form-check">
+					  <input class="form-check-input" type="checkbox" value="">
+					  <span class="form-check-label">
+					    Europe
+					  </span>
+					</label>  <!-- form-check.// -->
+
+					<label class="form-check">
+					  <input class="form-check-input" type="checkbox" value="">
+					  <span class="form-check-label">
+					    Asia
+					  </span>
+					</label>  <!-- form-check.// -->
+
+					<label class="form-check">
+					  <input class="form-check-input" type="checkbox" value="">
+					  <span class="form-check-label">
+					    Oceania
+					  </span>
+					</label>  <!-- form-check.// -->
+				</form>
+				</div> <!-- card-body.// -->
+			</div>
+		</article> <!-- card-group-item.// -->
+
+
+
+
+
+
+
+
+	<!-- <article class="card-group-item">
+		<header class="card-header">
+			<h6 class="title">Ratings </h6>
+		</header>
+		<div class="filter-content">
+			<div class="card-body">
+			<label class="form-check">
+			  <input class="form-check-input" type="radio" name="exampleRadio" value="">
+			  <span class="form-check-label">
+			    First hand items
+			  </span>
+			</label>
+			<label class="form-check">
+			  <input class="form-check-input" type="radio" name="exampleRadio" value="">
+			  <span class="form-check-label">
+			    Brand new items
+			  </span>
+			</label>
+			<label class="form-check">
+			  <input class="form-check-input" type="radio" name="exampleRadio" value="">
+			  <span class="form-check-label">
+			    Some other option
+			  </span>
+			</label>
+			</div> <!-- card-body.// -->
+		<!-- </div> -->
+	<!-- </article> <!-- card-group-item.// -->
+<!-- </div> <!-- card.// -->
+
+
+
 
 </html>
