--- a/app/views/guides/edit.html.erb
+++ b/app/views/guides/edit.html.erb
@@ -289,75 +289,47 @@
 							 <%= link_to 'Log In', new_user_session_url,class:"btn btn-primary get-started-btn mt-1 mb-1" %>
 						</li>
 				<% end %>
-		</ul>
 
-
-
-
-
-
-
-		<!-- <ul class="nav navbar-nav navbar-right ml-auto">
-			<li class="nav-item">
-				<li class="nav-item">
-					<a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle get-started-btn mt-1 mb-1">Log in</a> -->
-					<!-- <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Login</a>
-				<ul class="dropdown-menu form-wrapper">
-					<li>
-						<form action="/examples/actions/confirmation.php" method="post"> -->
-							<!-- <p class="hint-text">Sign in with your social media account</p>
-							<div class="form-group social-btn clearfix">
-								<a href="#" class="btn btn-primary pull-left"><i class="fa fa-facebook"></i> Facebook</a>
-								<a href="#" class="btn btn-info pull-right"><i class="fa fa-twitter"></i> Twitter</a>
-							</div> -->
-							<!-- <div class="or-seperator"><b>or</b></div> -->
-							<!-- <div class="form-group">
-								<input type="text" class="form-control" placeholder="Username" required="required">
-							</div> -->
-							<!-- <div class="form-group">
-								<input type="password" class="form-control" placeholder="Password" required="required">
-							</div> -->
-							<!-- <input type="submit" class="btn btn-primary btn-block" value="Login"> -->
-							<!-- <div class="form-footer">
-								<a href="#">Forgot Your password?</a>
-							</div> -->
-						<!-- </form>
-					</li>
-				</ul>
-			</li> -->
-
-				<!-- <ul class="dropdown-menu form-wrapper"> -->
-					<!-- <li> -->
-
-						<!-- <form action="/examples/actions/confirmation.php" method="post"> -->
-							<!-- <p class="hint-text">Fill in this form to create your account!</p> -->
-							<!-- <div class="form-group">
-								<input type="text" class="form-control" placeholder="Username" required="required">
-							</div> -->
-							<!-- <div class="form-group">
-								<input type="password" class="form-control" placeholder="Password" required="required">
-							</div> -->
-							<!-- <div class="form-group">
-								<input type="password" class="form-control" placeholder="Confirm Password" required="required">
-							</div> -->
-							<!-- <div class="form-group">
-								<label class="checkbox-inline"><input type="checkbox" required="required"> I am above 18 yea</a></label>
-							</div> -->
-							<!-- <input type="submit" class="btn btn-primary btn-block" value="Sign up"> -->
-						<!-- </form> -->
-					<!-- </li> -->
-				<!-- </ul> -->
-			</li>
-		</ul>
-	</div>
 </nav>
 </body>
 
 
 <h1>This is a guide/edit page!</h1>
 <br />
+  <div class="row">
+    <div class="col">
+      <h2>Edit Guide</h2>
 
-<div class="container">
-<img src="<%=image_url("craftbeer.jpg") %>" class="img-fluid" alt="Responsive image">
-</div>
+      <%= form_with scope: :guide, model: @guide, local: true do |form| %>
+
+
+					<div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text">Title of Guide</span>
+            <%= form.text_field :title, class:"form-control" %>
+          </div>
+
+
+           <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text">Text</span>
+          </div>
+          <%= form.text_area :description, class:"form-control" %>
+        </div>
+
+              <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text">Image</span>
+          </div>
+          <%= form.text_field :image, class:"form-control" %>
+        </div>
+
+
+
+      </div>
+        <%= form.submit :class=>'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+
 <br />
