--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -271,7 +271,7 @@
 			<li class="nav-item"><a href="/beers" class="nav-link">Beers</a></li>
 			<li class="nav-item"><a href="/guides" class="nav-link">Guides</a></li>
 			<li class="nav-item dropdown">
-				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Countries <b class="caret"></b></a>
+				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Regions <b class="caret"></b></a>
 				<ul class="dropdown-menu">
 					<li><a href="#" class="dropdown-item">North America</a></li>
 					<li><a href="#" class="dropdown-item">South America</a></li>
@@ -405,7 +405,7 @@
 	<div class="card">
 		<article class="card-group-item">
 			<header class="card-header">
-				<h6 class="title">Country </h6>
+				<h6 class="title">Regions </h6>
 			</header>
 
 			<div class="filter-content">
@@ -452,42 +452,7 @@
 </div>
 </div> <!-- card-group-item.// -->
 
-
-
-
-
-
-
-
-	<!-- <article class="card-group-item">
-		<header class="card-header">
-			<h6 class="title">Ratings </h6>
-		</header>
-		<div class="filter-content">
-			<div class="card-body">
-			<label class="form-check">
-			  <input class="form-check-input" type="radio" name="exampleRadio" value="">
-			  <span class="form-check-label">
-			    First hand items
-			  </span>
-			</label>
-			<label class="form-check">
-			  <input class="form-check-input" type="radio" name="exampleRadio" value="">
-			  <span class="form-check-label">
-			    Brand new items
-			  </span>
-			</label>
-			<label class="form-check">
-			  <input class="form-check-input" type="radio" name="exampleRadio" value="">
-			  <span class="form-check-label">
-			    Some other option
-			  </span>
-			</label>
-			</div> <!-- card-body.// -->
-		<!-- </div> -->
-	<!-- </article> <!-- card-group-item.// -->
-<!-- </div> <!-- card.// -->
-<div style="display:inline-block; width:620px; margin:10px; border:2px solid red">
+<div style="display:inline-block; width:620px; margin:10px;">
 <% @beers.each do |beer| %>
     <div class="card mb-3" style="max-width: 600px">
         <a style="color:inherit; text-decoration:inherit" href=<%=beer_path(beer.id)%>>
