Updated edit/delete button on show upon user login and updated "countries" dropdown to "regions"

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -271,7 +271,7 @@
 			<li class="nav-item"><a href="/beers" class="nav-link">Beers</a></li>
 			<li class="nav-item"><a href="/guides" class="nav-link">Guides</a></li>
 			<li class="nav-item dropdown">
-				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Countries <b class="caret"></b></a>
+				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Regions <b class="caret"></b></a>
 				<ul class="dropdown-menu">
 					<li><a href="#" class="dropdown-item">North America</a></li>
 					<li><a href="#" class="dropdown-item">South America</a></li>
@@ -405,7 +405,7 @@
 	<div class="card">
 		<article class="card-group-item">
 			<header class="card-header">
-				<h6 class="title">Country </h6>
+				<h6 class="title">Regions </h6>
 			</header>
 
 			<div class="filter-content">
