--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -64,8 +64,10 @@
 <br>  <h2 class="text-center">Showing a list of our craftbeers </h2>
 
 <br>
+<div style="border: 2px solid black; width:1100px; margin: 0 auto">
+<div style="border: 2px solid blue; width: 300px; display: inline-block">
 <div class="row">
-	<aside class="col-sm-4">
+	<aside class="col-sm-12">
 
 <!-- CATEGORY -->
 <div class="card">
@@ -159,10 +161,10 @@
 		</article>
 </div>
 </div> <!-- card-group-item.// -->
+</div>
+</div>
 
-
-
-<div style="display:inline-block; width:620px; margin:10px;">
+<div style="display:inline-block; width:620px; border: 2px solid red; float:right; margin: 0 80px">
 <% @beers.each do |beer| %>
     <div class="card mb-3" style="max-width: 600px">
         <a style="color:inherit; text-decoration:inherit" href=<%=beer_path(beer.id)%>>
@@ -183,5 +185,9 @@
     </div>
 <%end %>
 </div>
+
+</div>
+
+
 
 </html>
