--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -243,3 +243,14 @@
     width: 100%;
     font-size: 600%;
   }
+
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 10%;
+    background-color: gold;
+    color: white;
+    text-align: center;
+  }
