--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,11 +1,12 @@
 <html>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	// Prevent dropdown menu from closing when click inside the form
 	$(document).on("click", ".navbar-right .dropdown-menu", function(e){
 		e.stopPropagation();
 	});
-</script>
-</head>
+</script> -->
+<!-- </head> -->
+
 <body>
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
@@ -41,17 +42,6 @@
 			</div>
 		</form>
 
-		<ul class="nav navbar-nav navbar-right ml-auto">
-				<% if user_signed_in? %>
-						<li class="nav-item">
-							 <%= link_to 'Log Out', destroy_user_session_url, method: :delete, class:"btn btn-primary get-started-btn mt-1 mb-1" %>
-						</li
-				<% else%>
-						<li class="nav-item">
-							 <%= link_to 'Log In', new_user_session_url,class:"btn btn-primary get-started-btn mt-1 mb-1" %>
-						</li>
-				<% end %>
-		</ul>
 
 		<ul class="nav navbar-nav navbar-right ml-auto">
 				<% if user_signed_in? %>
