--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -105,4 +105,16 @@
   </div>
 </div>
 
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+
+<div class="footer">
+  <p>Footer</p>
+</div>
+
 </html>
