--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -5,7 +5,7 @@
 		e.stopPropagation();
 	});
 </script>
-</head>
+<!-- </head> -->
 <body>
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
@@ -64,8 +64,8 @@
 <br>  <h2 class="text-center">Showing a list of our craftbeers </h2>
 
 <br>
-<div style="border: 2px solid black; width:1100px; margin: 0 auto">
-<div style="border: 2px solid blue; width: 300px; display: inline-block">
+<div style="width:1100px; margin: 0 auto">
+<div style="width: 300px; display: inline-block">
 <div class="row">
 	<aside class="col-sm-12">
 
@@ -157,7 +157,7 @@
 </div>
 </div>
 
-<div style="display:inline-block; width:620px; border: 2px solid red; float:right; margin: 0 80px">
+<div style="display:inline-block; width:620px; float:right; margin: 0 80px">
 <% @beers.each do |beer| %>
     <div class="card mb-3" style="max-width: 600px">
         <a style="color:inherit; text-decoration:inherit" href=<%=beer_path(beer.id)%>>
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <div class="col-md-2">
-                    <img class="card-img" style="height:250px; width:70px; margin:10px" src=<%= beer.image %> alt="...">
+                    <img class="card-img" style="height:250px; width: 70px; margin:10px; display: block; margin: 0 auto" src=<%= beer.image %> alt="...">
                 </div>
             </div>
         </a>
