--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -235,6 +235,16 @@
       position: relative;
     }
 
+    .btn-primary1 {
+      align-content: center;
+      background-color: #FFD700 !important;
+      padding: 5px 10px;
+      font-size: 15px;
+      border-radius: 10px;
+      width:40%;
+      margin-right: 20px;
+      }
+
   .caption  {
     color: white;
     position: absolute;
