--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -59,20 +59,21 @@
 
 
 	<div class=container>
-		<h1>This is a guide/index page!</h1>
+		<h1>This is the guide to beer page.</h1>
 		<br />
   <% if user_signed_in? %>
   <%= link_to "Add New Guide ", new_guide_path, class:"btn btn-primary mb-3" %>
 	<% end %>
 	</div>
 <br />
+
+
 <div class="container">
 <div class = "guide">
 <div style="display:inline-block; width:350px; margin:10px">
 <% @guides.each do |guide| %>
-     <div class="card">
-                    <img class="card-img-top" style=" object-fit: contain ; width: 200px; height: 200px; display:block; margin-left:auto; margin-right:auto"  src=<%= guide.image %> alt="...">
-
+    <div class="card">
+    <img class="card-img-top" style=" object-fit: contain ; width: 200px; height: 200px; display:block; margin-left:auto; margin-right:auto"  src=<%= guide.image %> alt="...">
     <div class="card-body" style="max-width: 600px">
         <a style="color:inherit; text-decoration:inherit" href=<%=guide_path(guide.id)%>>
             <div class="row no-gutters">
