--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -71,6 +71,7 @@
     	  <div class="card-body">
       	  <h5 class="card-title"><%= @beer.title %></h5>
 		        <p class="card-text"><small class="text-muted"><%= @beer.style %></small>
+                <p class="card-text"><small class="text-muted"><%= @beer.region %></small>
 		        <p class="card-text"><small class="text-muted"><%= @beer.country %></small>
 		        <p class="card-text"><%= @beer.description %></p>
     	  </div>
