pimped up the login page

--- a/app/views/guides/edit.html.erb
+++ b/app/views/guides/edit.html.erb
@@ -56,7 +56,7 @@
 </nav>
 </body>
 
-
+<div class="container">
 <h1>This is a guide/edit page!</h1>
 <br />
   <div class="row">
@@ -86,14 +86,11 @@
           </div>
           <%= form.text_field :image, class:"form-control" %>
         </div>
-
-
-
       </div>
         <%= form.submit :class=>'btn btn-primary' %>
       <% end %>
      <% end %>
     </div>
   </div>
-
+</div>
 <br />
