--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -59,7 +59,7 @@
 
 
 	<div class=container>
-		<h1>This is the guide to beer page.</h1>
+		<h1>This are the beers that I have tried.</h1>
 		<br />
   <% if user_signed_in? %>
   <%= link_to "Add New Guide ", new_guide_path, class:"btn btn-primary mb-3" %>
