Gave beer cards class according to style, made checkboxes start out checked

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -264,3 +264,19 @@
     color: white;
     text-align: center;
   }
+
+  .Lager {
+    background-color: #ffe6a1;
+  }
+
+  .Stout {
+    background-color: #edb721;
+  }
+
+  .IPA {
+    background-color: #ffc41f;
+  }
+
+  .Wheat {
+    background-color: #ffe240;
+  }
