--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -57,8 +57,13 @@
 </body>
 
 	<div class=container>
+		<br />
 		<h1>This are the beers that I have tried.</h1>
 		<br />
+
+	<h3>Welcome  <%= current_user.email %></h3>
+	<br />
+
   <% if user_signed_in? %>
   <%= link_to "Add New Guide ", new_guide_path, class:"btn btn-primary mb-3" %>
 	<% end %>
