--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -35,12 +35,12 @@
 		</ul>
 
 		<!-- SEARCH BOX -->
-		<form class="navbar-form form-inline">
+		<!-- <form class="navbar-form form-inline">
 			<div class="input-group search-box">
 				<input type="text" id="search" class="form-control" placeholder="Search here...">
 				<span class="input-group-addon"><i class="material-icons"></i></span>
 			</div>
-		</form>
+		</form> -->
 
 				<!-- LOGIN and LOG OUT -->
 		<ul class="nav navbar-nav navbar-right ml-auto">
