--- a/app/views/guides/new.html.erb
+++ b/app/views/guides/new.html.erb
@@ -32,12 +32,14 @@
 				</ul>
 			</li>
 		</ul>
-		<form class="navbar-form form-inline">
+
+		<!-- SEARCH -->
+		<!-- <form class="navbar-form form-inline">
 			<div class="input-group search-box">
 				<input type="text" id="search" class="form-control" placeholder="Search here...">
 				<span class="input-group-addon"><i class="material-icons"></i></span>
 			</div>
-		</form>
+		</form> -->
 
 
 		<ul class="nav navbar-nav navbar-right ml-auto">
@@ -87,7 +89,7 @@
 	        <%= form.submit :class=>'btn btn-primary' %>
 	      <% end %>
 	     <% end %>
-			 
+
 	    </div>
 	  </div>
 	</div>
