--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -36,12 +36,12 @@
 			<li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
 			<li class="nav-item"><a href="#" class="nav-link">Contact</a></li> -->
 		</ul>
-		<form class="navbar-form form-inline">
+		<!-- <form class="navbar-form form-inline">
 			<div class="input-group search-box">
 				<input type="text" id="search" class="form-control" placeholder="Search here...">
 				<span class="input-group-addon"><i class="material-icons"></i></span>
 			</div>
-		</form>
+		</form> -->
 
 
 		<ul class="nav navbar-nav navbar-right ml-auto">
