--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,12 +35,24 @@
 			</li>
 		</ul>
 
-			<form class="navbar-form form-inline">
+
+
+
+			<!-- SEARCH -->
+
+			<!-- <form class="navbar-form form-inline" action="/search" >
 				<div class="input-group search-box">
 					<input type="text" id="search" class="form-control" placeholder="Search here...">
 					<span class="input-group-addon"><i class="material-icons"></i></span>
 				</div>
-			</form>
+			</form> -->
+<!--
+			<form class="form-inline my-2 my-lg-0" action="/search">
+				<input class="form-control mr-sm-2" name="q" type="text" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form> -->
+
+
 
 			<ul class="nav navbar-nav navbar-right ml-auto">
 					<% if user_signed_in? %>
@@ -107,9 +119,9 @@
 <br />
 
 
-<div class="footer">
+<!-- <div class="footer">
 	<br/>
   <p>Footer</p>
-</div>
+</div> -->
 
 </html>
