--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,67 +1,63 @@
 <html>
 <script type="text/javascript">
-	// Prevent dropdown menu from closing when click inside the form
-	$(document).on("click", ".navbar-right .dropdown-menu", function(e){
-		e.stopPropagation();
-	});
+    // Prevent dropdown menu from closing when click inside the form
+    $(document).on("click", ".navbar-right .dropdown-menu", function(e){
+        e.stopPropagation();
+    });
 </script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
-	<div class="navbar-header d-flex col">
-		<a class="navbar-brand" href="#">beer<b>GEM</b></a>
-		<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle navbar-toggler ml-auto">
-			<span class="navbar-toggler-icon"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-	</div>
-	<!-- Collection of nav links, forms, and other content for toggling -->
-	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
-		<ul class="nav navbar-nav">
-			<li class="nav-item"><a href="#" class="nav-link">Beers</a></li>
-			<li class="nav-item"><a href="#" class="nav-link">Guides</a></li>
-			<li class="nav-item dropdown">
-				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Regions <b class="caret"></b></a>
-				<ul class="dropdown-menu">
-					<li><a href="#" class="dropdown-item">North America</a></li>
-					<li><a href="#" class="dropdown-item">South America</a></li>
-					<li><a href="#" class="dropdown-item">Europe</a></li>
-					<li><a href="#" class="dropdown-item">Asia</a></li>
-          <li><a href="#" class="dropdown-item">Oceania</a></li>
-				</ul>
-			</li>
-		</ul>
-		<form class="navbar-form form-inline">
-			<div class="input-group search-box">
-				<input type="text" id="search" class="form-control" placeholder="Search here...">
-				<span class="input-group-addon"><i class="material-icons"></i></span>
-			</div>
-		</form>
+    <div class="navbar-header d-flex col">
+        <a class="navbar-brand" href="#">beer<b>GEM</b></a>
+        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle navbar-toggler ml-auto">
+            <span class="navbar-toggler-icon"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+    </div>
+    <!-- Collection of nav links, forms, and other content for toggling -->
+    <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
+        <ul class="nav navbar-nav">
+            <li class="nav-item"><a href="#" class="nav-link">Beers</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Guides</a></li>
+            <li class="nav-item dropdown">
+                <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Regions <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#" class="dropdown-item">North America</a></li>
+                    <li><a href="#" class="dropdown-item">South America</a></li>
+                    <li><a href="#" class="dropdown-item">Europe</a></li>
+                    <li><a href="#" class="dropdown-item">Asia</a></li>
+         <li><a href="#" class="dropdown-item">Oceania</a></li>
+                </ul>
+            </li>
+        </ul>
 
-		<ul class="nav navbar-nav navbar-right ml-auto">
-				<% if user_signed_in? %>
-						<li class="nav-item">
-							 <%= link_to 'Log Out', destroy_user_session_url, method: :delete, class:"btn btn-primary get-started-btn mt-1 mb-1" %>
-						</li>
-				<% else%>
-						<li class="nav-item">
-							 <%= link_to 'Log In', new_user_session_url,class:"btn btn-primary get-started-btn mt-1 mb-1" %>
-						</li>
-				<% end %>
-		</ul>
+        <!-- <form class="navbar-form form-inline">
+            <div class="input-group search-box">
+                <input type="text" id="search" class="form-control" placeholder="Search here...">
+                <span class="input-group-addon"><i class="material-icons"></i></span>
+            </div>
+        </form> -->
+        
+        <ul class="nav navbar-nav navbar-right ml-auto">
+                <% if user_signed_in? %>
+                        <li class="nav-item">
+                             <%= link_to 'Log Out', destroy_user_session_url, method: :delete, class:"btn btn-primary get-started-btn mt-1 mb-1" %>
+                        </li>
+                <% else%>
+                        <li class="nav-item">
+                             <%= link_to 'Log In', new_user_session_url,class:"btn btn-primary get-started-btn mt-1 mb-1" %>
+                        </li>
+                <% end %>
+        </ul>
 
-			</li>
-		</ul>
-	</div>
+    </div>
 </nav>
 </body>
-
-
 <h1>This is a users/show page!</h1>
 <br />
-
 <div class="container">
 <img src="<%=image_url("craftbeer.jpg") %>" class="img-fluid" alt="Responsive image">
 </div>
