--- a/app/views/wishlists/show.html.erb
+++ b/app/views/wishlists/show.html.erb
@@ -33,12 +33,12 @@
 				</ul>
 			</li>
 		</ul>
-		<form class="navbar-form form-inline">
+		<!-- <form class="navbar-form form-inline">
 			<div class="input-group search-box">
 				<input type="text" id="search" class="form-control" placeholder="Search here...">
 				<span class="input-group-addon"><i class="material-icons"></i></span>
 			</div>
-		</form>
+		</form> -->
 
 		<ul class="nav navbar-nav navbar-right ml-auto">
 				<% if user_signed_in? %>
@@ -50,8 +50,6 @@
 							 <%= link_to 'Log In', new_user_session_url,class:"btn btn-primary get-started-btn mt-1 mb-1" %>
 						</li>
 				<% end %>
-		</ul>
-			</li>
 		</ul>
 	</div>
 </nav>
