reset selection button

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -272,6 +272,8 @@
 
 }
 
+
+
   .Lager {
     background-color: #ffe6a1;
   }
@@ -288,3 +290,12 @@
     background-color: #ffe240;
   }
 
+.button  {
+  align-content: center;
+  background-color: #FFD700 !important;
+  padding: 5px 10px;
+  font-size: 15px;
+  border-radius: 10px;
+  width:40%;
+  margin-right: 20px;
+}
