--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -148,6 +148,10 @@
 					    Oceania
 					  </span>
 					</label>  <!-- form-check.// -->
+					<div class="reset"
+					<button><a href="/beers">Reset All Selections</a></button>
+					</div>
+
 				</form>
 				</div> <!-- card-body.// -->
 			</div>
@@ -271,6 +275,7 @@
     asiaCheckBox.addEventListener("click", removeAsia);
     oceaniaCheckBox.addEventListener("click", removeOceania);
 </script>
+
 
 
 </html>
