--- a/app/views/ipa/index.html.erb
+++ b/app/views/ipa/index.html.erb
@@ -52,3 +52,20 @@
 							</li>
 					<% end %>
 			</ul>
+
+			<h1>Listing Articles</h1>
+
+<% @articles.each do |article| %>
+
+    <%= article.title %> :
+
+    <%= article.description %>
+
+    <%= link_to 'Edit', edit_article_path(article) %>
+    <%= link_to 'Show', article_path(article) %>
+
+    <br/>
+
+<% end %>
+<br/>
+<%= link_to 'New Article', new_article_path %>
