Rendered the top 3 beer of the month from each category

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -83,7 +83,8 @@
 
     <div class="col-sm">
       <figure class="figure">
-        <img src="<%=image_url("ipa.jpg") %>" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+				<a href="/ipa"><img src="<%=image_url("ipa.jpg") %>" class="figure-img img-fluid rounded"></a>
+
         <figcaption class="figure-caption"></figcaption>
         <div class="caption">
         <p>IPA</p>
@@ -93,7 +94,7 @@
 
     <div class="col-sm">
       <figure class="figure">
-        <img src="<%=image_url("lager.jpg") %>" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+				<a href="/lager"><img src="<%=image_url("lager.jpg") %>" class="figure-img img-fluid rounded"></a>
         <figcaption class="figure-caption"></figcaption>
         <div class="caption">
         <p>Lager</p>
@@ -102,7 +103,7 @@
 
     <div class="col-sm">
       <figure class="figure">
-        <img src="<%=image_url("stout.jpg") %>" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+				<a href="/stout"><img src="<%=image_url("stout.jpg") %>" class="figure-img img-fluid rounded"></a>
         <figcaption class="figure-caption"></figcaption>
         <div class="caption">
         <p>Stout</p>
