--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -272,8 +272,6 @@
 
 }
 
-
-
   .Lager {
     background-color: #ffe6a1;
   }
@@ -289,3 +287,8 @@
   .Wheat {
     background-color: #ffe240;
   }
+
+.topic{
+  text-align: center;
+  padding-top: 30px;
+}
