--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -75,7 +75,7 @@
 		<!-- <h1>This are the beers that I have tried.</h1> -->
 		<br />
 
-	<h3>Welcome  <%= current_user.email %></h3>
+	<h3>Welcome,  <%= current_user.email %>!</h3>
 	<br />
 
   <% if user_signed_in? %>
