--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -76,7 +76,7 @@
 </div>
 <br />
 <br />
-<h1 style="text-align: center;">Top 10 beers</h1>
+<h1 style="text-align: center;">Top 3 beers of the month</h1>
 <!-- Containers for IPA, PALE ALE & STOUTS -->
 <div class="container">
   <div class="row">
