--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -292,3 +292,10 @@
   text-align: center;
   padding-top: 30px;
 }
+
+.topbeer {
+  display: block;
+ margin-left: auto;
+ margin-right: auto;
+ width: 50%;
+}
