added back to main page button on log in page

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -61,7 +61,7 @@
 <br />
 
 <div class="container">
-<br>  <h2 class="text-center">Showing a list of our craftbeers </h2>
+<br>  <h2 class="text-center">Craft Beers Listing</h2>
 
 <br>
 <div style="width:1100px; margin: 0 auto">
