--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -59,7 +59,9 @@
 </body>
 
 <div class="container">
-	<h1>This is a beer/show page!</h1>
+	<br />
+	<br />
+	<h1>Displaying: </h1>
 	<br />
 </div>
 <br />
@@ -83,3 +85,5 @@
 	  </div>
 	</div>
 </div>
+
+<%= image_path("beer_#{@beer.id}.jpg") %>
