--- a/app/views/ipa/index.html.erb
+++ b/app/views/ipa/index.html.erb
@@ -62,7 +62,7 @@
 <div class="card mb-3 <%= beer.style %> <%= beer.region %>" style="max-width: 600px">
 		<a style="color:inherit; text-decoration:inherit" href=<%=beer_path(beer.id)%>>
 			<div class="row no-gutters">
-				<div class="col-md-10">
+				<div class="col-sm-10">
 					<div class="card-body">
 						<h5 class="card-title"><%= beer.title %></h5>
 							<p class="card-text"><small class="text-muted"><%= beer.style %></small></p>
@@ -77,4 +77,4 @@
 			</div>
 </div>
 <%end%>
-</>
+</div>
